--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>BMI-Calculator</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="calcus.jpg">
   </head>
@@ -33,3 +33,4 @@
     </div>
   </body>
 </html>
+
